--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <p><h1><b><mark2> 0LV30N Ventures </mark2></b></h1></p>
         <p>
             <h2>
-                OLVEON Ventures positions as a renewable and futuristic technology investment company in Europe and Nigeria. We channel investment toward products and technologies advancing subjects of interest, including Green Mobility, Virtual Reality, Augmented Reality, and the Internet of the Future.<br /><br />
+                OLVEON Ventures positions as a renewable and futuristic technology investment company in Europe and Nigeria. We channel investment toward products and technologies advancing subjects of interest, including in Green Mobility, Virtual Reality, Augmented Reality, and the Internet of the Future.<br /><br />
 
 
-                We believe in “Building a <mark>#BetterFuture</mark> together.”<br />
+                We believe in “Building a <mark>#BetterFuture</mark> together.” <br />
                 Discuss or say <a href="hello@olveonventures.com">hello@olveonventures.com</a><br>
             </h2>
         </p>
